--- a/package.json
+++ b/package.json
@@ -1,29 +1,20 @@
 {
-  "name": "homeworks08",
+  "name": "test",
   "version": "1.0.0",
   "description": "",
-  "source": "index.html",
+  "main": "index.js",
   "scripts": {
-    "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html --dist-dir=docs/"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/SHEVEL0V/homeWorks08.git"
+    "url": "git+https://github.com/SHEVEL0V/test.git"
   },
   "keywords": [],
-  "author": "Shevelov",
+  "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/SHEVEL0V/homeWorks08/issues"
+    "url": "https://github.com/SHEVEL0V/test/issues"
   },
-  "homepage": "https://github.com/SHEVEL0V/homeWorks08#readme",
-  "devDependencies": {
-    "parcel": "^2.4.1"
-  },
-  "dependencies": {
-    "@vimeo/player": "^2.16.4",
-    "lodash.throttle": "^4.1.1",
-    "simplelightbox": "^2.10.3"
-  }
+  "homepage": "https://github.com/SHEVEL0V/test#readme"
 }
