--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "test",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "browserslist": "> 0.5%, last 2 versions, not dead",
+  "source": "src/index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "parcel --open ",
+    "build": "parcel build --dist-dir=docs"
   },
   "repository": {
     "type": "git",
@@ -16,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/SHEVEL0V/test/issues"
   },
-  "homepage": "https://github.com/SHEVEL0V/test#readme"
+  "homepage": "https://github.com/SHEVEL0V/test#readme",
+  "devDependencies": {
+    "parcel": "^2.4.1"
+  }
 }
